--- a/django_project/gite/static/css/crispyform.css
+++ b/django_project/gite/static/css/crispyform.css
@@ -42,7 +42,7 @@ select {
 
 .margini{
   margin-left: 80px;
-  margin-right: 80px
+  margin-right: 80px;
 }
 
 .crispy_table {
@@ -53,4 +53,3 @@ select {
   margin-right: 80px;
   margin-bottom: 20px; /* Aggiungi un margine inferiore di 20px */
 }
-
